fixed flicker and landscape images for the carousel

--- a/crew/crew.css
+++ b/crew/crew.css
@@ -56,8 +56,23 @@
     justify-content: space-around;
 }
 
-#crewPopupCarousel .carouselImageContainer > img {
+#crewPopupCarousel .carouselImageContainer {
+    width: 100%;
     height: 60vh;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.prevButton:focus, .nextButton:focus {
+    box-shadow: none;
+    z-index: 1000;
+}
+
+#crewPopupCarousel .carouselImageContainer > img {
+    max-height: 100%;
+    max-width: 100%;
     aspect-ratio: initial;
 }
 
